--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     }
   },
   "require": {
-    "php": ">= 5.3"
+    "php": ">= 5.5.9",
+    "symfony/yaml": ">= 3.1.0, < 5.0.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.3",
