--- a/resources/schema/schema/elasticsearch.yml
+++ b/resources/schema/schema/elasticsearch.yml
@@ -1,4 +1,3 @@
-elasticsearch:
-  versions:
-    6.1.0:
-      $ref: 'elasticsearch/6.1.0.yml#'
+versions:
+  6.1.0:
+    $ref: 'elasticsearch/6.1.0.yml'
